# ANNA

./: .gitignore  .gitmodules  ANNAMLDataset.xlsx  CHANGELOG.md  CMakeLists.txt  README.md  package-lock.json  reforce_annaBot.sln
ANNAStandalone/: ANNAStandalone.csproj  Program.cs
ANNATests/: ANNATests.csproj  Program.cs
ANNA_CPP/: ANNA_CPP.vcxproj  ANNA_CPP.vcxproj.filters  AnnaExtension.cpp  AnnaExtension.h  Output.h  Response.cpp  Response.h
AnnaDesktop/AnnaDesktop/: AnnaDesktop.csproj  App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Startup.cs  app.manifest
AnnaDesktop/AnnaDesktop (Package)/: AnnaDesktop (Package).wapproj  Package.appxmanifest
AnnaDesktop/AnnaDesktop.WinUI/: AnnaDesktop.WinUI.csproj
AnnaDesktop/AnnaDesktop.WinUI/Properties/: launchSettings.json
AnnaDevDesktop_Simple/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
DataRetrieval/: DataRetrieval.csproj  Program.cs
Dependencies/Word2Vec/: LICENSE.txt  Word2vec.Tools.deps.json
MlToolsTests/: MlToolsTests.csproj  Program.cs
TestExtension/: HelloWorldExtension.cs  TestExtension.csproj
annaCore2/: AnnaExtension.cs  Program.cs  Security.cs  annaCore2.csproj  tts.py
annaCore2 - Backup/: Program.cs  annaCore2.csproj
annaCore2 - Backup/News/: NewsCollector.cs
annaCore2 - Backup/tts/: __init__.py  driver.py  engine.py  six.py
annaCore2 - Backup/tts/wkref/: wkref.py
annaCore2/BasicCommands/: Dictionary.cs  Greeting.cs  Time.cs  Timing.cs  WebSearch.cs
annaCore2/Data/: Compression.cs  SortData.cs
annaCore2/Interaction/: Output.cs  Response.cs  ResponseOutput.cs  gptJ.cs
annaCore2/User/: User.cs
annaCore2/Weather/: WeatherCollector.cs
annaCore2/tts/drivers/: sapi5.py
annaCore2_IoT/: Class1.cs  annaCore2_IoT.csproj
annaCore3/: AnnaExtension.cpp  AnnaExtension.h  CMakeLists.txt  Core.cpp  Core.h  Helper.hpp  Output.cpp  Output.h  Response.cpp  Response.h  annaCore3.vcxproj  annaCore3.vcxproj.filters
annaMLTools/: Program.cs  annaMLTools.csproj
annaMLTools/General/: Tokenizer.cs  tf-idf.cs
annaMLTools/Keyword/: Vectorizer.cs
annaMLTools/PreTraining/: Tokenizer.cs  Vectorizer.cs  tf-idf.cs
annaMLTools/Regression/: LinearRegression.cs
annaMLTools/Training/: Training.cs
inputParser/: Program.cs  inputParser.csproj.old
inputParser/Properties/: AssemblyInfo.cs
reforce_annaBot/: App.config  Program.cs  annaCore.csproj  moduleParser.cs  modules.xml  packages.config
reforce_annaBot/Modules/: aps.cs  fRecognition.cs
reforce_annaBot/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs  Settings.settings
reforce_annaBotML.ConsoleApp/: ModelBuilder.cs  Program.cs  reforce_annaBotML.ConsoleApp.csproj
reforce_annaBotML.Model/: ConsumeModel.cs  ModelInput.cs  ModelOutput.cs
